--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="La Casa 菜单">
 <meta name="theme-color" content="#111">
-<title>La Casa 专属隐藏款 · 电子菜单（长者友好·PWA v2）</title>
+<title>La Casa 专属隐藏款 · 电子菜单</title>
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <style>
   html,body{height:100%}
@@ -65,10 +65,7 @@
     <div class="toolbar">
       <div>
         <h1>La Casa 专属隐藏款 · Hidden Treasures</h1>
-        <p class="sub">已禁用缩放；支持 iPad 添加到主屏。点右侧按钮可生成主屏图标（1024×1024）。</p>
-      </div>
-      <div>
-        <button id="dlIcon" class="btn">下载图标PNG（LICOR）</button>
+        <p class="sub">酒隐之茄专为雪茄客打造的雪茄配饮，经过了反复的测评，能够带来非凡的品茄体验。不同类型的酒，在灰茄前、茄中、茄后兼容性不同。</p>
       </div>
     </div>
   </div>
