--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -8,7 +8,7 @@
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 <meta name="apple-mobile-web-app-title" content="La Casa 菜单">
 <meta name="theme-color" content="#111">
-<title>La Casa 电子菜单（长者友好·PWA·一体化 v5）</title>
+<title>La Casa 电子菜单</title>
 <link rel="apple-touch-icon" href="apple-touch-icon.png">
 <style>
   :root{
@@ -86,10 +86,7 @@
     <div class="toolbar">
       <div>
         <h1>La Casa 专属隐藏款 · Hidden Treasures</h1>
-        <p class="sub">大字号 · 分类Tab + 轮播 · 半透明涂层 · 禁止缩放 · 本地购物车和订单 · 一键生成主屏图标。</p>
-      </div>
-      <div>
-        <button id="dlIcon" class="btn primary">下载图标PNG（LICOR）</button>
+        <p class="sub">酒隐之茄专为雪茄客打造的雪茄配饮，经过了反复的测评，能够带来非凡的品茄体验。不同类型的酒，在灰茄前、茄中、茄后兼容性不同。</p>
       </div>
     </div>
   </div>
@@ -383,37 +380,6 @@ function drawRingText(ctx, text, radius, startAngle, spacingPx){
   }
   ctx.restore();
 }
-
-document.getElementById('dlIcon').addEventListener('click', ()=>{
-  const size=1024, r=size/2;
-  const canvas=Object.assign(document.createElement('canvas'),{width:size,height:size});
-  const ctx=canvas.getContext('2d');
-  ctx.fillStyle='#0f0f12'; ctx.fillRect(0,0,size,size);
-  ctx.beginPath(); ctx.arc(r,r,r*0.9,0,Math.PI*2); ctx.fillStyle='#1b1b23'; ctx.fill();
-  ctx.translate(r,r);
-  ctx.fillStyle='#e3be77';
-  ctx.font='bold 72px -apple-system, PingFang SC, "Noto Sans CJK SC", "Microsoft YaHei", Arial';
-  // 两段文字 + 明显空白（gapAngle）
-  const base='LA CASA DEL LICOR';
-  const gapAngle = Math.PI/6; // 30° 空白
-  const radius=r*0.75;
-  // 第一段（顶部偏左开始）
-  drawRingText(ctx, base, radius, -Math.PI/2 - Math.PI/12, 8);
-  // 留空白
-  ctx.rotate(gapAngle);
-  // 分隔点
-  ctx.save(); ctx.rotate(-Math.PI/2); ctx.beginPath(); ctx.arc(0,-radius,4,0,Math.PI*2); ctx.fill(); ctx.restore();
-  // 第二段
-  ctx.rotate(gapAngle);
-  drawRingText(ctx, base, radius, 0, 8);
-  // 中心“茄”
-  ctx.setTransform(1,0,0,1,0,0);
-  ctx.fillStyle='#e3be77'; ctx.textAlign='center'; ctx.textBaseline='middle';
-  ctx.font='900 420px PingFang SC, "-apple-system", "Noto Sans CJK SC", "Microsoft YaHei", Arial';
-  ctx.fillText('茄', r, r);
-  const a=document.createElement('a'); a.href=canvas.toDataURL('image/png'); a.download='apple-touch-icon.png'; a.click();
-  alert('已下载图标：环绕字母按宽度分配角度，留有 30° 空白间隔，中心“茄”居中。');
-});
 </script>
 </body>
 </html>
