--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -43,8 +43,8 @@
   @media (min-width:1024px){ .slide{flex-basis:48%;max-width:48%;height:520px} }
   @media (orientation: landscape) and (max-height: 744px){
     .wrap {padding: 0 16px;}
-    h1{font-size:14px; float: left;}
-    .sub{font-size:12px; float: left;}
+    h1{font-size:14px; float: left;margin: 0;}
+    .sub{font-size:12px; float: left; margin: 1px 10px;}
   }
   .imgph{width:100%;height:100%;display:flex;align-items:center;justify-content:center;color:#80838f;font-size:18px;background:repeating-linear-gradient(45deg,#202028,#202028 12px,#1a1a21 12px,#1a1a21 24px)}
   .slide>img,
