--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -179,7 +179,7 @@ const CATS=[
 ];
 const MENU=[
   // 咖啡（单规格：杯）
-  {id:'ice-1',cat:'coffee',title:'极品冰滴｜淡雅芳香系（百搭雪茄）',desc:'0℃冰水滴滤 1 天，发酵 3–7 天，口感清冽冰爽。',variants:[{label:'杯', unit:'/杯', price:11900}]},
+  {id:'ice-1',cat:'coffee',title:'极品冰滴｜淡雅芳香系（百搭雪茄）',desc:'0℃冰水滴滤 1 天，发酵 3–7 天，口感清冽冰爽。',variants:[{label:'杯', unit:'/杯', price:11900}],img:'/images/ice-1.jpg'},
   {id:'ice-2',cat:'coffee',title:'极品冰滴｜果香红茶系（提升风味）',desc:'果香跳跃、红茶感明显，激发雪茄香气。',variants:[{label:'杯', unit:'/杯', price:11900}]},
   {id:'ice-3',cat:'coffee',title:'极品冰滴｜浆果活泼系（适配强度）',desc:'更有劲道的风味线，适配高强度雪茄。',variants:[{label:'杯', unit:'/杯', price:11900}]},
   {id:'hot-1',cat:'coffee',title:'精品手冲｜万花',desc:'参赛级参数调校，层次丰富。',variants:[{label:'杯', unit:'/杯', price:7900}]},
@@ -203,9 +203,13 @@ const MENU=[
   {id:'rose-1',cat:'rose',title:'意大利 特莎蒂洛 蓝布鲁斯科 桃红起泡 NV',desc:'全程兼容雪茄，轻松畅饮。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}]},
   {id:'rose-2',cat:'rose',title:'意大利 时尚控 桃红起泡 NV',desc:'派对气质，愉悦开胃。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}]},
   // 小众烈酒
-  {id:'rare-1',cat:'rare',title:'拉达米尔 白兰地',desc:'适合灰茄中/后。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}]},
-  {id:'rare-2',cat:'rare',title:'梅斯赫蒂 五年 白兰地',desc:'顺滑果干风味。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}]},
-  {id:'rare-3',cat:'rare',title:'麦伦多 单一微醺麦芽',desc:'麦芽香气，轻盈微醺。',variants:[{label:'杯',unit:'/杯',price:11800},{label:'瓶',unit:'/瓶',price:118000}]},
+  {id:'rare-1',cat:'rare',title:'狂爱芒果甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'/images/rare-1.jpg'},
+  {id:'rare-2',cat:'rare',title:'狂爱椰子甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'/images/rare-2.jpg'},
+  {id:'rare-3',cat:'rare',title:'狂爱甜瓜甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'/images/rare-3.jpg'},
+  {id:'rare-4',cat:'rare',title:'狂爱石榴甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'/images/rare-4.jpg'},
+  {id:'rare-5',cat:'rare',title:'拉达米尔 白兰地',desc:'适合灰茄中/后。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}]},
+  {id:'rare-6',cat:'rare',title:'梅斯赫蒂 五年 白兰地',desc:'顺滑果干风味。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}]},
+  {id:'rare-7',cat:'rare',title:'麦伦多 单一微醺麦芽',desc:'麦芽香气，轻盈微醺。',variants:[{label:'杯',unit:'/杯',price:11800},{label:'瓶',unit:'/瓶',price:118000}]},
   // 特调
   {id:'mojito',cat:'sig',title:'比那尔德里奥的莫吉托',desc:'Pinar del Río Mojito · 与雪茄全程兼容。',variants:[{label:'杯',unit:'/杯',price:9800}]},
   {id:'cubalibre',cat:'sig',title:'自由古巴之烟草时光',desc:'Cigar Time of Cuba Libre · 经典新演绎。',variants:[{label:'杯',unit:'/杯',price:9800}]},
