--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -191,29 +191,28 @@ const MENU=[
   {id:'cubaney-10',cat:'rum',title:'古巴邑 10 年',desc:'顺喉易饮，入门之选。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:98000}],img:'images/ice-1.jpg'},
   {id:'cubaney-20',cat:'rum',title:'古巴邑 20 年',desc:'陈年香气浓郁，回味悠长。',variants:[{label:'杯',unit:'/杯',price:23800},{label:'瓶',unit:'/瓶',price:339600}],img:'images/ice-1.jpg'},
   // 白葡萄酒
-  {id:'ww-1',cat:'white',title:'新西兰十字星 马尔堡 长相思 干白 2021',desc:'单宁近零，激发味蕾，适合灰茄前/中。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'ww-2',cat:'white',title:'法拉利酒庄 小夏布利 村庄 干白 2023',desc:'矿物感清晰，酸度爽脆。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'ww-3',cat:'white',title:'法国 杜索 传统佳酿 香槟 NV',desc:'气泡细腻，活力十足。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
+  {id:'ww-1',cat:'white',title:'南十字星 马尔堡 长相思 干白 2021',desc:'单宁近零，激发味蕾，适合灰茄前/中。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ww-1.jpg'},
+  {id:'ww-2',cat:'white',title:'勃艮第 法拉利酒庄 小夏布利 村庄 干白 2023',desc:'矿物感清晰，酸度爽脆。',variants:[{label:'瓶',unit:'/瓶',price:68800}],img:'images/ww-2.jpg'},
+  {id:'ww-3',cat:'white',title:'法国 杜索 传统佳酿 香槟 NV',desc:'气泡细腻，活力十足。',variants:[{label:'瓶',unit:'/瓶',price:98900}],img:'images/ww-3.jpg'},
   // 红葡萄酒
-  {id:'rw-1',cat:'red',title:'摩尔多瓦 梅洛 干红 2012',desc:'适合灰茄后饮用。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'rw-2',cat:'red',title:'意大利 法芭雅 蒙特布查诺 红 2022',desc:'成熟红果与香料气息。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'rw-3',cat:'red',title:'意大利 曼都利亚 利嘉 红 2021',desc:'饱满酒体，余味绵长。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'rw-4',cat:'red',title:'意大利 格兰吉雅 经典 阿玛罗尼 红 2022',desc:'力度与甜美并存。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
+  {id:'rw-1',cat:'red',title:'摩尔多瓦 梅洛 干红 2012',desc:'适合灰茄后饮用。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/rw-1.jpg'},
+  {id:'rw-2',cat:'red',title:'法芭雅 蒙特布查诺 红 2022',desc:'成熟红果与香料气息。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rw-2.jpg'},
+  {id:'rw-3',cat:'red',title:'曼都利亚 利嘉 红 2021',desc:'饱满酒体，余味绵长。',variants:[{label:'瓶',unit:'/瓶',price:49800}],img:'images/rw-3.jpg'},
+  {id:'rw-4',cat:'red',title:'格兰吉雅 经典 阿玛罗尼 红 2022',desc:'力度与甜美并存。',variants:[{label:'瓶',unit:'/瓶',price:98900}],img:'images/rw-4.jpg'},
   // 桃红
-  {id:'rose-1',cat:'rose',title:'意大利 特莎蒂洛 蓝布鲁斯科 桃红起泡 NV',desc:'全程兼容雪茄，轻松畅饮。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
-  {id:'rose-2',cat:'rose',title:'意大利 时尚控 桃红起泡 NV',desc:'派对气质，愉悦开胃。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/ice-1.jpg'},
+  {id:'rose-1',cat:'rose',title:'特莎蒂洛 蓝布鲁斯科 桃红起泡 NV',desc:'全程兼容雪茄，轻松畅饮。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rose-1.jpg'},
+  {id:'rose-2',cat:'rose',title:'时尚控 桃红起泡 NV',desc:'派对气质，愉悦开胃。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:''},
   // 小众烈酒
-  {id:'rare-1',cat:'rare',title:'狂爱芒果甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-1.jpg'},
-  {id:'rare-2',cat:'rare',title:'狂爱椰子甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-2.jpg'},
-  {id:'rare-3',cat:'rare',title:'狂爱甜瓜甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-3.jpg'},
-  {id:'rare-4',cat:'rare',title:'狂爱石榴甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-4.jpg'},
-  {id:'rare-5',cat:'rare',title:'拉达米尔 白兰地',desc:'适合灰茄中/后。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}],img:'images/ice-1.jpg'},
-  {id:'rare-6',cat:'rare',title:'梅斯赫蒂 五年 白兰地',desc:'顺滑果干风味。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}],img:'images/ice-1.jpg'},
-  {id:'rare-7',cat:'rare',title:'麦伦多 单一微醺麦芽',desc:'麦芽香气，轻盈微醺。',variants:[{label:'杯',unit:'/杯',price:11800},{label:'瓶',unit:'/瓶',price:118000}],img:'images/ice-1.jpg'},
+  {id:'rare-1',cat:'rare',title:'狂爱芒果甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-1.jpg'},
+  {id:'rare-2',cat:'rare',title:'狂爱椰子甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-2.jpg'},
+  {id:'rare-3',cat:'rare',title:'狂爱甜瓜甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-3.jpg'},
+  {id:'rare-4',cat:'rare',title:'狂爱石榴甜性烈酒',desc:'水果炸弹，甜度很高。',variants:[{label:'瓶',unit:'/瓶',price:32800}],img:'images/rare-4.jpg'},
+  {id:'rare-5',cat:'rare',title:'拉达米尔 白兰地',desc:'适合灰茄中/后。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}],img:'images/rare-5.jpg'},
+  {id:'rare-6',cat:'rare',title:'梅斯赫蒂 五年 白兰地',desc:'顺滑果干风味。',variants:[{label:'杯',unit:'/杯',price:6900},{label:'瓶',unit:'/瓶',price:68900}],img:'images/rare-6.jpg'},
   // 特调
-  {id:'mojito',cat:'sig',title:'比那尔德里奥的莫吉托',desc:'Pinar del Río Mojito · 与雪茄全程兼容。',variants:[{label:'杯',unit:'/杯',price:9800}],img:'images/ice-1.jpg'},
-  {id:'cubalibre',cat:'sig',title:'自由古巴之烟草时光',desc:'Cigar Time of Cuba Libre · 经典新演绎。',variants:[{label:'杯',unit:'/杯',price:9800}],img:'images/ice-1.jpg'},
-  {id:'castle',cat:'sig',title:'夜之古堡',desc:'Castle in the Night · 夜色与余味。',variants:[{label:'杯',unit:'/杯',price:9800}],img:'images/ice-1.jpg'},
+  {id:'mojito',cat:'sig',title:'比那尔德里奥的莫吉托',desc:'Pinar del Río Mojito · 与雪茄全程兼容。',variants:[{label:'杯',unit:'/杯',price:9800}],img:''},
+  {id:'cubalibre',cat:'sig',title:'自由古巴之烟草时光',desc:'Cigar Time of Cuba Libre · 经典新演绎。',variants:[{label:'杯',unit:'/杯',price:9800}],img:''},
+  {id:'castle',cat:'sig',title:'夜之古堡',desc:'Castle in the Night · 夜色与余味。',variants:[{label:'杯',unit:'/杯',price:9800}],img:''},
   // 小彩蛋 & 小食（单规格）
   {id:'bucket-1',cat:'easter',title:'好彩头冰桶｜好运杯',desc:'含可饮白桦树汁，可冰镇任意酒水，会发光。',variants:[{label:'桶',unit:'/桶',price:5900}],img:'images/ice-1.jpg'},
   {id:'bucket-2',cat:'easter',title:'好彩头冰桶｜招财杯',desc:'同款彩光冰桶。',variants:[{label:'桶',unit:'/桶',price:5900}],img:'images/ice-1.jpg'},
