--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -218,9 +218,9 @@ const MENU=[
   {id:'bucket-2',cat:'easter',title:'好彩头冰桶｜招财杯',desc:'同款彩光冰桶。',variants:[{label:'桶',unit:'/桶',price:5900}],img:'images/ice-1.jpg'},
   {id:'bucket-3',cat:'easter',title:'好彩头冰桶｜吉祥杯',desc:'同款彩光冰桶。',variants:[{label:'桶',unit:'/桶',price:5900}],img:'images/ice-1.jpg'},
   {id:'bucket-4',cat:'easter',title:'好彩头冰桶｜平安杯',desc:'同款彩光冰桶。',variants:[{label:'桶',unit:'/桶',price:5900}],img:'images/ice-1.jpg'},
-  {id:'snack-1',cat:'snack',title:'坚果拼盘',desc:'小胡桃、松子、杏仁、腰果等随机拼盘。',variants:[{label:'盘',unit:'/盘',price:8800}],img:'images/ice-1.jpg'},
-  {id:'snack-2',cat:'snack',title:'伊比利亚火腿',desc:'咸香与脂香，雪茄绝配。',variants:[{label:'盘',unit:'/盘',price:19800}],img:'images/ice-1.jpg'},
-  {id:'snack-3',cat:'snack',title:'黑松露饼干',desc:'幽微松露香气，酥脆可口。',variants:[{label:'盘',unit:'/盘',price:4900}],img:'images/ice-1.jpg'}
+  {id:'snack-1',cat:'snack',title:'坚果拼盘',desc:'小胡桃、松子、杏仁、腰果等随机拼盘。',variants:[{label:'盘',unit:'/盘',price:8800}],img:''},
+  {id:'snack-2',cat:'snack',title:'伊比利亚火腿',desc:'咸香与脂香，雪茄绝配。',variants:[{label:'盘',unit:'/盘',price:19800}],img:''},
+  {id:'snack-3',cat:'snack',title:'黑松露饼干',desc:'幽微松露香气，酥脆可口。',variants:[{label:'盘',unit:'/盘',price:4900}],img:''}
 ];
 
 const fmtY = n => '¥' + (n/100).toLocaleString('zh-CN',{minimumFractionDigits:0});
