--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -182,9 +182,9 @@ const MENU=[
   {id:'ice-1',cat:'coffee',title:'极品冰滴｜淡雅芳香系（百搭雪茄）',desc:'0℃冰水滴滤 1 天，发酵 3–7 天，口感清冽冰爽。',variants:[{label:'杯', unit:'/杯', price:11900}],img:'images/ice-1.jpg'},
   {id:'ice-2',cat:'coffee',title:'极品冰滴｜果香红茶系（提升风味）',desc:'果香跳跃、红茶感明显，激发雪茄香气。',variants:[{label:'杯', unit:'/杯', price:11900}],img:'images/ice-1.jpg'},
   {id:'ice-3',cat:'coffee',title:'极品冰滴｜浆果活泼系（适配强度）',desc:'更有劲道的风味线，适配高强度雪茄。',variants:[{label:'杯', unit:'/杯', price:11900}],img:'images/ice-1.jpg'},
-  {id:'hot-1',cat:'coffee',title:'精品手冲｜万花',desc:'参赛级参数调校，层次丰富。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/ice-1.jpg'},
-  {id:'hot-2',cat:'coffee',title:'精品手冲｜耶加莱德',desc:'花果香突出，酸甜平衡。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/ice-1.jpg'},
-  {id:'hot-3',cat:'coffee',title:'精品手冲｜桃莓优格',desc:'桃与莓果气息，酸乳感顺滑。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/ice-1.jpg'},
+  {id:'hot-1',cat:'coffee',title:'精品手冲｜万花',desc:'参赛级参数调校，层次丰富。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/hot-1.jpg'},
+  {id:'hot-2',cat:'coffee',title:'精品手冲｜耶加莱德',desc:'花果香突出，酸甜平衡。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/hot-1.jpg'},
+  {id:'hot-3',cat:'coffee',title:'精品手冲｜桃莓优格',desc:'桃与莓果气息，酸乳感顺滑。',variants:[{label:'杯', unit:'/杯', price:7900}],img:'images/hot-1.jpg'},
   // 朗姆（多规格：杯/瓶）
   {id:'santiago-20',cat:'rum',title:'圣地亚哥 20 年（绝版）',desc:'加勒比热辣与陈年复杂度的平衡。',variants:[{label:'杯',unit:'/杯',price:43900},{label:'瓶',unit:'/瓶',price:655900}],img:'images/ice-1.jpg'},
   {id:'treasure',cat:'rum',title:'金银岛宝藏（国礼）',desc:'收藏级古巴朗姆，气派之选。',variants:[{label:'瓶',unit:'/瓶',price:1799900}],img:'images/ice-1.jpg'},
