--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -172,10 +172,11 @@ document.addEventListener('gesturestart', e=>e.preventDefault());
 // 分类与菜单（支持多规格）
 const CATS=[
   {id:'coffee',name:'精品咖啡 Coffee'},{id:'rum',name:'古巴朗姆 Rum for Cigar'},
-  {id:'white',name:'白葡萄酒 White Wine'},{id:'red',name:'红葡萄酒 Red Wine'},
+  {id:'sig',name:'La Casa 特调 Signature Cocktails'},
   {id:'rose',name:'桃红葡萄酒 Rosé'},{id:'rare',name:'小众烈酒 Rare Spirits'},
-  {id:'sig',name:'La Casa 特调 Signature Cocktails'},{id:'easter',name:'La Casa 小彩蛋'},
-  {id:'snack',name:'茄客小食'}
+  {id:'white',name:'白葡萄酒 White Wine'},{id:'red',name:'红葡萄酒 Red Wine'},
+  {id:'snack',name:'茄客小食'},
+  {id:'easter',name:'La Casa 小彩蛋'}
 ];
 const MENU=[
   // 咖啡（单规格：杯）
