--- a/test/test202509101.html
+++ b/test/test202509101.html
@@ -278,7 +278,7 @@ function slideCard(m){
           [...chips.children].forEach(x=>x.classList.remove('active'));
           c.classList.add('active');
           priceEl.textContent = fmtY(v.price) + v.unit;
-        }}, `${v.label}${v.unit}`);
+        }}, `${v.label}`);
         return c;
       })
     );
